tests/snapshots/plan_golden__race_assoc.snap
---
source: tests/plan_golden.rs
expression: output
---
--- BEFORE ---
PlanDag {
    nodes: [
        Leaf {
            label: "a",
        },
        Leaf {
            label: "b",
        },
        Leaf {
            label: "c",
        },
        Race {
            children: [
                PlanId([ID]),
                PlanId([ID]),
            ],
        },
        Race {
            children: [
                PlanId([ID]),
                PlanId([ID]),
            ],
        },
    ],
    root: Some(
        PlanId([ID]),
    ),
}
--- REWRITE REPORT ---
1. RaceAssoc: flattened nested race ([PLAN_ID] -> [PLAN_ID])

--- AFTER ---
PlanDag {
    nodes: [
        Leaf {
            label: "a",
        },
        Leaf {
            label: "b",
        },
        Leaf {
            label: "c",
        },
        Race {
            children: [
                PlanId([ID]),
                PlanId([ID]),
            ],
        },
        Race {
            children: [
                PlanId([ID]),
                PlanId([ID]),
            ],
        },
        Race {
            children: [
                PlanId([ID]),
                PlanId([ID]),
                PlanId([ID]),
            ],
        },
    ],
    root: Some(
        PlanId([ID]),
    ),
}
